--- a/index.html
+++ b/index.html
@@ -141,15 +141,15 @@
         </section>
 
         <!-- Services section -->
-        <secion class="services">
+        <section class="services container">
             <div class="services__content">
                 <!-- Services heading -->
-                <div class="services__section-title section-title">
+                <div class="section-heading pink-text circular-md">
                     SERVICES
                 </div>
 
                 <!-- Services sub heading -->
-                <div class="services__section-sub-heading section-sub-heading">
+                <div class="section-sub-heading circular-md">
                     Our top value categories for you
                 </div>
             </div>
@@ -157,9 +157,9 @@
             <!-- Services card container -->
             <div class="services__cards-container">
                 <!-- Services tour guide card -->
-                <div class="services__card-1 services-card-1">
+                <div class="services__card">
                     <!-- Services card 1 image -->
-                    <div class="services-card-1__img">
+                    <div class="card__img">
                         <img
                             src="/assets/images/services/destination.png"
                             alt="Globe with two pin points connected by dotted line."
@@ -167,18 +167,18 @@
                     </div>
 
                     <!-- Services card 1 heading -->
-                    <div class="services-card-1__title">Best Tour Guide</div>
+                    <div class="card__title circular-md">Best Tour Guide</div>
 
                     <!-- Services card 1 description -->
-                    <div class="services-card-1__desc">
+                    <div class="card__desc inter grey-text">
                         What looked like a small patch of purple grass, above
                         five feet.
                     </div>
                 </div>
 
-                <div class="services__card-2 services-card-2">
+                <div class="services__card">
                     <!-- Services card 2 image -->
-                    <div class="services-card-2__img">
+                    <div class="card__img">
                         <img
                             src="/assets/images/services/booking.png"
                             alt="Icon of a transaction and a check on calender depicting easy booking."
@@ -186,17 +186,17 @@
                     </div>
 
                     <!-- Services card 2 heading -->
-                    <div class="services-card-2__title">Easy Booking</div>
+                    <div class="card__title circular-md">Easy Booking</div>
 
                     <!-- Services card 2 description -->
-                    <div class="services-card-2__desc">
+                    <div class="card__desc inter grey-text">
                         Square, was moving across the sand in their direction.
                     </div>
                 </div>
 
-                <div class="services__card-3 services-card-3">
+                <div class="services__card">
                     <!-- Services card 3 image -->
-                    <div class="services-card-3__img">
+                    <div class="card__img">
                         <img
                             src="/assets/images/services/cloudy.png"
                             alt="Icon of a cloud with sun on its corner."
@@ -204,20 +204,20 @@
                     </div>
 
                     <!-- Services card 3 heading -->
-                    <div class="services-card-3__title">Weather Forecast</div>
+                    <div class="card__title circular-md">Weather Forecast</div>
 
                     <!-- Services card 3 description -->
-                    <div class="services-card-3__desc">
+                    <div class="card__desc inter grey-text">
                         What looked like a small patch of purple grass, above
                         five feet.
                     </div>
                 </div>
             </div>
-        </secion>
+        </section>
 
         <script type="module" src="./src/script/index.js"></script>
 
-         <!-- For browsers that have JS diabled  -->
+        <!-- For browsers that have JS diabled  -->
         <noscript>
             <p>
                 Please enable JavaScript to view the full content of this page,
