AR_RU_04 : Services : Made use of components and utility classes

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 
         <!-- Services section -->
         <section class="services container">
+            <div class="services__blur yellow-bg"></div>
             <div class="services__content">
                 <!-- Services heading -->
                 <div class="section-heading pink-text circular-md">
@@ -194,7 +195,7 @@
                     </div>
                 </div>
 
-                <div class="services__card">
+                <div class="services__card services__card3">
                     <!-- Services card 3 image -->
                     <div class="card__img">
                         <img
