AR_RU_02 : Fixed primary and secondary button styling, removed css dependency on js

--- a/index.html
+++ b/index.html
@@ -28,24 +28,20 @@
             <nav
                 class="js-header__nav-links nav-links white-bg grey-text circular-md font-weight-400"
             >
-                <div
+                <ul
                     class="nav-links__container white-bg js-nav-links__container"
                 >
-                    <a href="#">Home</a>
-                    <a href="#">Discover</a>
-                    <a href="#">Special Deals</a>
-                    <a href="#">Contact</a>
-                </div>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Discover</a></li>
+                    <li><a href="#">Special Deals</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
                 <!--Auth btns-->
                 <div class="header__auth">
-                    <button
-                        class="header__login circular-md primary-button white-bg black-text font-weight-400"
-                    >
+                    <button class="header__login button secondary-button">
                         Log In
                     </button>
-                    <button
-                        class="header__signup circular-md primary-button purple-bg white-text font-weight-400"
-                    >
+                    <button class="header__signup button primary-button">
                         Sign Up
                     </button>
                 </div>
