AR_RU_03 : Hero : Made use of components and utilities classes

--- a/index.html
+++ b/index.html
@@ -62,12 +62,15 @@
             <div class="hero__content">
                 <!-- Triangles  -->
                 <div class="hero__triangles">
-                    <img src="/assets/images/hero/triangles.png" alt="" />
+                    <img
+                        src="/assets/images/hero/triangles.png"
+                        alt="Triangles Pointing upwards."
+                    />
                 </div>
 
                 <!-- Hero section explore the world  button -->
                 <button
-                    class="hero__explore-button pink-text primary-button circular-md"
+                    class="hero__explore-button button secondary-button pink-text"
                 >
                     <span class="explore-button__content"
                         >Explore the world!</span
@@ -87,13 +90,11 @@
                 </h3>
 
                 <div class="hero__buttons actions">
-                    <button
-                        class="actions__get-started white-text purple-bg circular-md"
-                    >
+                    <button class="actions__get-started primary-button button">
                         Get Started
                     </button>
                     <button
-                        class="actions__watch-demo watch__demo purple-text circular-md"
+                        class="actions__watch-demo watch__demo button secondary-button purple-text"
                     >
                         <i class="icon-play-circle5-1 watch-demo__icon"></i>
                         <span class="watch-demo__text">Watch Demo</span>
