AR_RU_02 : Header : Followed BEM model in button utility class

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 </ul>
                 <!--Auth btns-->
                 <div class="header__auth">
-                    <button class="header__login button secondary-button">
+                    <button class="header__login button button--secondary">
                         Log In
                     </button>
-                    <button class="header__signup button primary-button">
+                    <button class="header__signup button button--primary">
                         Sign Up
                     </button>
                 </div>
