AR_RU_03 : Hero : Rebased all changes

--- a/index.html
+++ b/index.html
@@ -69,13 +69,11 @@
                 </div>
 
                 <!-- Hero section explore the world  button -->
-                <button
-                    class="hero__explore-button button secondary-button pink-text"
-                >
-                    <span class="explore-button__content"
+                <button class="hero__explore-button button button--secondary">
+                    <span class="explore-button__content pink-text"
                         >Explore the world!</span
                     >
-                    <i class="icon-work-1 explore-button__icon"></i>
+                    <i class="icon-work-1 explore-button__icon pink-text"></i>
                 </button>
 
                 <h1 class="hero__heading circular-md">
@@ -90,14 +88,18 @@
                 </h3>
 
                 <div class="hero__buttons actions">
-                    <button class="actions__get-started primary-button button">
+                    <button class="actions__get-started button--primary button">
                         Get Started
                     </button>
                     <button
-                        class="actions__watch-demo watch__demo button secondary-button purple-text"
+                        class="actions__watch-demo watch__demo button button--secondary"
                     >
-                        <i class="icon-play-circle5-1 watch-demo__icon"></i>
-                        <span class="watch-demo__text">Watch Demo</span>
+                        <i
+                            class="icon-play-circle5-1 watch-demo__icon purple-text"
+                        ></i>
+                        <span class="watch-demo__text purple-text"
+                            >Watch Demo</span
+                        >
                     </button>
                 </div>
             </div>
