--- a/index.html
+++ b/index.html
@@ -12,28 +12,42 @@
         <link rel="shortcut icon" href="logo.ico" type="image/x-icon" />
     </head>
     <body>
-        <!-- This is for demo purposes only, will be replaced in other branches -->
+        <!-- Header section -->
+        <header class="header white-bg container">
+            <!-- Website logo -->
+            <a href="#" class="header__logo">
+                <i class="icon-Vector-9 gradient-purple-to-pink"></i>
+            </a>
 
-        <div class="circular-md">
-            Some text here of circular std family medium
-        </div>
+            <!--Hamburger button-->
+            <button class="header__hamburger js-header__hamburger">
+                <i class="icon-Vector purple-text js-sidebar__icon"></i>
+            </button>
 
-        <div class="circular-bold1">Some text of circular std family small</div>
+            <!--Navigation Links-->
+            <nav
+                class="js-header__nav-links nav-links white-bg grey-text circular-md font-weight-400"
+            >
+                <ul
+                    class="nav-links__container white-bg js-nav-links__container"
+                >
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Discover</a></li>
+                    <li><a href="#">Special Deals</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <!--Auth btns-->
+                <div class="header__auth">
+                    <button class="header__login button button--secondary">
+                        Log In
+                    </button>
+                    <button class="header__signup button button--primary">
+                        Sign Up
+                    </button>
+                </div>
+            </nav>
+        </header>
 
-        <div class="circular-bold2">Some text of circular large family</div>
-
-        <div class="sub-heading">some text here of inter font family</div>
-        <span class="icon-play-circle5-1 purple"></span>
-        <span class="icon-Vector-7 yellow"></span>
-        <img src="/assets/images/hero/company4.png" alt="" />
-        <div class="orange">Some text of orange color</div>
-        <span class="icon-Group-8"
-            ><span class="path1 purple"></span><span class="path2 white"></span
-        ></span>
-
-        <div class="pink">Some text of pink color</div>
-        <div class="yellow">Some text of yellow color</div>
-        <div class="purple">Some text of purple color</div>
         <script type="module" src="./src/script/index.js"></script>
 
         <!-- For browsers that have JS diabled  -->
