AR_RU_04 : Services : Resolved coderabbitai issues

--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
                         Get Started
                     </button>
                     <button
-                        class="actions__watch-demo watch__demo purple-text circular-md"
-                        class="actions__watch-demo watch__demo button button--secondary"
+                        class="actions__watch-demo watch__demo button button--secondary purple-text"
                     >
                         <i
                             class="icon-play-circle5-1 watch-demo__icon purple-text"
@@ -144,20 +143,18 @@
         <section class="services container">
             <div class="services__content">
                 <!-- Services heading -->
-                <div class="section-heading pink-text circular-md">
-                    SERVICES
-                </div>
+                <h2 class="section-heading pink-text circular-md">SERVICES</h2>
 
                 <!-- Services sub heading -->
-                <div class="section-sub-heading circular-md">
+                <h3 class="section-sub-heading circular-md">
                     Our top value categories for you
-                </div>
+                </h3>
             </div>
 
             <!-- Services card container -->
             <div class="services__cards-container">
                 <!-- Services tour guide card -->
-                <div class="services__card">
+                <div class="services__card card">
                     <!-- Services card 1 image -->
                     <div class="card__img">
                         <img
@@ -166,17 +163,21 @@
                         />
                     </div>
 
-                    <!-- Services card 1 heading -->
-                    <div class="card__title circular-md">Best Tour Guide</div>
+                    <div class="card__content-wrapper">
+                        <!-- Services card 1 heading -->
+                        <div class="card__title circular-md">
+                            Best Tour Guide
+                        </div>
 
-                    <!-- Services card 1 description -->
-                    <div class="card__desc inter grey-text">
-                        What looked like a small patch of purple grass, above
-                        five feet.
+                        <!-- Services card 1 description -->
+                        <div class="card__desc inter grey-text">
+                            What looked like a small patch of purple grass,
+                            above five feet.
+                        </div>
                     </div>
                 </div>
 
-                <div class="services__card">
+                <div class="services__card card">
                     <!-- Services card 2 image -->
                     <div class="card__img">
                         <img
@@ -185,16 +186,19 @@
                         />
                     </div>
 
-                    <!-- Services card 2 heading -->
-                    <div class="card__title circular-md">Easy Booking</div>
+                    <div class="card__content-wrapper">
+                        <!-- Services card 2 heading -->
+                        <div class="card__title circular-md">Easy Booking</div>
 
-                    <!-- Services card 2 description -->
-                    <div class="card__desc inter grey-text">
-                        Square, was moving across the sand in their direction.
+                        <!-- Services card 2 description -->
+                        <div class="card__desc inter grey-text">
+                            Square, was moving across the sand in their
+                            direction.
+                        </div>
                     </div>
                 </div>
 
-                <div class="services__card services__card3">
+                <div class="services__card services__card3 card">
                     <!-- Services card 3 image -->
                     <div class="card__img">
                         <img
@@ -203,13 +207,17 @@
                         />
                     </div>
 
-                    <!-- Services card 3 heading -->
-                    <div class="card__title circular-md">Weather Forecast</div>
+                    <div class="card__content-wrapper">
+                        <!-- Services card 3 heading -->
+                        <div class="card__title circular-md">
+                            Weather Forecast
+                        </div>
 
-                    <!-- Services card 3 description -->
-                    <div class="card__desc inter grey-text">
-                        What looked like a small patch of purple grass, above
-                        five feet.
+                        <!-- Services card 3 description -->
+                        <div class="card__desc inter grey-text">
+                            What looked like a small patch of purple grass,
+                            above five feet.
+                        </div>
                     </div>
                 </div>
             </div>
