AR_RU_05 : Travel : Rebased changes and made use of components and utility classes

--- a/index.html
+++ b/index.html
@@ -232,6 +232,73 @@
             </div>
         </section>
 
+        <section class="travel">
+            <div class="travel__img">
+                <img src="/assets/images/travel/bg.png" alt="" />
+            </div>
+
+            <div class="travel__content">
+                <div class="travel__headings-wrapper">
+                    <h2 class="section-heading circular-md pink-text">
+                        TRAVEL POINT
+                    </h2>
+                    <h3 class="section-sub-heading circular-md">
+                        We helping you find your dream location
+                    </h3>
+                </div>
+                <h4 class="section-desc inter grey-text">
+                    Contrary to popular belief, Lorem Ipsum is not simply random
+                    text. It has roots in a piece of classical Latin literature
+                    from 45 BC.
+                </h4>
+
+                <div class="travel__cards-container">
+                    <div class="travel__icon">
+                        <img
+                            src="./public/assets/images/travel/icon-yellow.png"
+                            alt=""
+                        />
+                    </div>
+
+                    <div class="travel__cards-group1">
+                        <div class="tarvel__card card">
+                            <h2 class="card__heading orange-text circular-md">
+                                500+
+                            </h2>
+                            <h3 class="card__sub-heading inter">
+                                Holiday Package
+                            </h3>
+                        </div>
+                        <div class="tarvel__card card">
+                            <h2 class="card__heading orange-text circular-md">
+                                100
+                            </h2>
+                            <h3 class="card__sub-heading inter">
+                                Luxury Hotel
+                            </h3>
+                        </div>
+                    </div>
+                    <div class="travel__cards-group2">
+                        <div class="tarvel__card card">
+                            <h2 class="card__heading orange-text circular-md">
+                                7
+                            </h2>
+                            <h3 class="card__sub-heading inter">
+                                Premium Airlines
+                            </h3>
+                        </div>
+                        <div class="tarvel__card card">
+                            <h2 class="card__heading orange-text circular-md">
+                                2k+
+                            </h2>
+                            <h3 class="card__sub-heading inter">
+                                Happy Customers
+                            </h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <script type="module" src="./src/script/index.js"></script>
 
         <!-- For browsers that have JS diabled  -->
