Work in progress

--- a/index.html
+++ b/index.html
@@ -290,6 +290,36 @@
                 </div>
             </div>
         </section>
+
+        <section class="features">
+            <div class="features__img">
+                <img
+                    src="./public/assets/images/key-features/key-features-bg-img.png"
+                    alt=""
+                />
+            </div>
+            <div class="features__content">
+                <div class="features_headings-wrapper">
+                    <h2 class="section-heading circular-md pink-text">
+                        KEY FEATURES
+                    </h2>
+                    <h3 class="section-sub-heading circular-md">
+                        We offer best services
+                    </h3>
+                </div>
+                <h4 class="section-desc inter grey-text">
+                    Contrary to popular belief, Lorem Ipsum is not simply random
+                    text. It has roots in a piece of classical Latin literature
+                    from 45 BC.
+                </h4>
+                <div class="features__card-container">
+                    <div class="features__card card">
+                        <div class="card__icon-container"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <script type="module" src="./src/script/index.js"></script>
 
         <!-- For browsers that have JS diabled  -->
