work in progress

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 />
             </div>
             <div class="features__content">
-                <div class="features_headings-wrapper">
+                <div class="features__headings-wrapper">
                     <h2 class="section-heading circular-md pink-text">
                         KEY FEATURES
                     </h2>
@@ -314,7 +314,43 @@
                 </h4>
                 <div class="features__card-container">
                     <div class="features__card card">
-                        <div class="card__icon-container"></div>
+                        <div class="card__icon-container orange-bg">
+                            <i class="icon-Vector-4"></i>
+                        </div>
+                        <div class="card__text-wrapper">
+                            <h2 class="circular-md card-heading">
+                                We offer best services
+                            </h2>
+                            <h3 class="inter grey-text card-sub-heading">
+                                Lorem Ipsum is not simply random text
+                            </h3>
+                        </div>
+                    </div>
+                    <div class="features__card card">
+                        <div class="card__icon-container yellow-bg">
+                            <i class="icon-Vector-5"></i>
+                        </div>
+                        <div class="card__text-wrapper">
+                            <h2 class="circular-md card-heading">
+                                Schedule your trip
+                            </h2>
+                            <h3 class="inter grey-text card-sub-heading">
+                                It has roots in a piece of classical
+                            </h3>
+                        </div>
+                    </div>
+                    <div class="features__card card">
+                        <div class="card__icon-container orange-bg">
+                            <i class="icon-Vector-12"></i>
+                        </div>
+                        <div class="card__text-wrapper">
+                            <h2 class="circular-md card-heading">
+                                Get discounted coupons
+                            </h2>
+                            <h3 class="inter grey-text card-sub-heading">
+                                Lorem Ipsum is not simply random text
+                            </h3>
+                        </div>
                     </div>
                 </div>
             </div>
