center aligned travel section

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </div>
         </section>
 
-        <section class="travel">
+        <section class="travel container">
             <div class="travel__img">
                 <img src="/assets/images/travel/bg.png" alt="" />
             </div>
