AR_RU_06 : Key Features : Used components and utility classes to redevelop features section

--- a/index.html
+++ b/index.html
@@ -225,7 +225,10 @@
 
         <section class="travel container">
             <div class="travel__img">
-                <img src="/assets/images/travel/bg.png" alt="" />
+                <img
+                    src="/assets/images/travel/bg.png"
+                    alt="Image of a lady with a bag."
+                />
             </div>
 
             <div class="travel__content">
@@ -246,8 +249,8 @@
                 <div class="travel__cards-container">
                     <div class="travel__icon">
                         <img
-                            src="./public/assets/images/travel/icon-yellow.png"
-                            alt=""
+                            src="/assets/images/travel/icon-yellow.png"
+                            alt="Image depicting a bag."
                         />
                     </div>
 
@@ -291,11 +294,11 @@
             </div>
         </section>
 
-        <section class="features">
+        <section class="features container">
             <div class="features__img">
                 <img
-                    src="./public/assets/images/key-features/key-features-bg-img.png"
-                    alt=""
+                    src="/assets/images/key-features/key-features-bg-img.png"
+                    alt="Collage of images, church and  surfer riding waves"
                 />
             </div>
             <div class="features__content">
