AR_RU_07 : Testimonial : Developed a testimonial

--- a/index.html
+++ b/index.html
@@ -359,6 +359,214 @@
             </div>
         </section>
 
+        <section class="testimonial container">
+            <div class="testimonial__headings-wrapper">
+                <h2 class="section-heading pink-text circular-md">
+                    TESTIMONIALS
+                </h2>
+                <h3 class="section-sub-heading circular-md">
+                    Trust our clients
+                </h3>
+            </div>
+            <div class="splide">
+                <div class="splide__track">
+                    <ul class="splide__list">
+                        <li class="splide__slide">
+                            <div class="slide">
+                                <div class="slide__pic">
+                                    <img
+                                        src="/assets/images/testimonial/profile.png"
+                                        alt="Profile pic of a person"
+                                    />
+                                </div>
+                                <div class="slide__content">
+                                    <div class="slide__heading-rating-wrapper">
+                                        <h3
+                                            class="slide__heading orange-text circular-md"
+                                        >
+                                            Mark Smith
+                                            <span
+                                                class="slide__sub-heading black-text"
+                                                >/ Travel Enthusiast</span
+                                            >
+                                        </h3>
+
+                                        <div class="slide__rating">
+                                            <div
+                                                class="slide__star yellow-text"
+                                            >
+                                                <i class="icon-Vector-7"></i>
+                                            </div>
+                                            <div
+                                                class="slide__star yellow-text"
+                                            >
+                                                <i class="icon-Vector-7"></i>
+                                            </div>
+                                            <div
+                                                class="slide__star yellow-text"
+                                            >
+                                                <i class="icon-Vector-7"></i>
+                                            </div>
+                                            <div
+                                                class="slide__star yellow-text"
+                                            >
+                                                <i class="icon-Vector-7"></i>
+                                            </div>
+                                            <div
+                                                class="slide__star yellow-text"
+                                            >
+                                                <i class="icon-Vector-7"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <h4
+                                    class="slide__desc inter grey-text section-desc"
+                                >
+                                    Contrary to popular belief, Lorem Ipsum is
+                                    not simply random text. It has roots in a
+                                    piece of classical Latin literature from 45
+                                    BC.
+                                </h4>
+                            </div>
+                        </li>
+
+                        <li class="splide__slide">
+                            <div class="slide">
+                                <div class="slide__pic">
+                                    <img
+                                        src="/assets/images/testimonial/profile.png"
+                                        alt="Profile pic of a person"
+                                    />
+                                </div>
+                                <div class="slide__content">
+                                    <div class="slide__heading-rating-wrapper">
+                                        <h3
+                                            class="slide__heading orange-text circular-md"
+                                        >
+                                            Mark Smith
+                                            <span
+                                                class="slide__sub-heading black-text"
+                                                >/ Travel Enthusiast</span
+                                            >
+                                        </h3>
+
+                                        <div class="slide__rating">
+                                            <div
+                                                class="slide__star yellow-text"
+                                            >
+                                                <i class="icon-Vector-7"></i>
+                                            </div>
+                                            <div
+                                                class="slide__star yellow-text"
+                                            >
+                                                <i class="icon-Vector-7"></i>
+                                            </div>
+                                            <div
+                                                class="slide__star yellow-text"
+                                            >
+                                                <i class="icon-Vector-7"></i>
+                                            </div>
+                                            <div
+                                                class="slide__star yellow-text"
+                                            >
+                                                <i class="icon-Vector-7"></i>
+                                            </div>
+                                            <div
+                                                class="slide__star yellow-text"
+                                            >
+                                                <i class="icon-Vector-7"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <h4
+                                    class="slide__desc inter grey-text section-desc"
+                                >
+                                    Contrary to popular belief, Lorem Ipsum is
+                                    not simply random text. It has roots in a
+                                    piece of classical Latin literature from 45
+                                    BC.
+                                </h4>
+                            </div>
+                        </li>
+                        <li class="splide__slide">
+                            <div class="slide">
+                                <div class="slide__pic">
+                                    <img
+                                        src="/assets/images/testimonial/profile.png"
+                                        alt="Profile pic of a person"
+                                    />
+                                </div>
+                                <div class="slide__content">
+                                    <div class="slide__heading-rating-wrapper">
+                                        <h3
+                                            class="slide__heading orange-text circular-md"
+                                        >
+                                            Mark Smith
+                                            <span
+                                                class="slide__sub-heading black-text"
+                                                >/ Travel Enthusiast</span
+                                            >
+                                        </h3>
+
+                                        <div class="slide__rating">
+                                            <div
+                                                class="slide__star yellow-text"
+                                            >
+                                                <i class="icon-Vector-7"></i>
+                                            </div>
+                                            <div
+                                                class="slide__star yellow-text"
+                                            >
+                                                <i class="icon-Vector-7"></i>
+                                            </div>
+                                            <div
+                                                class="slide__star yellow-text"
+                                            >
+                                                <i class="icon-Vector-7"></i>
+                                            </div>
+                                            <div
+                                                class="slide__star yellow-text"
+                                            >
+                                                <i class="icon-Vector-7"></i>
+                                            </div>
+                                            <div
+                                                class="slide__star yellow-text"
+                                            >
+                                                <i class="icon-Vector-7"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <h4
+                                    class="slide__desc inter grey-text section-desc"
+                                >
+                                    Contrary to popular belief, Lorem Ipsum is
+                                    not simply random text. It has roots in a
+                                    piece of classical Latin literature from 45
+                                    BC.
+                                </h4>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="splide__pagination"></div>
+                <div class="splide__arrows">
+                    <button
+                        class="splide__arrow splide__arrow--prev button--secondary button"
+                    >
+                        <i class="icon-Bold-Outline-1"></i>
+                    </button>
+                    <button
+                        class="splide__arrow splide__arrow--next button--primary button"
+                    >
+                        <i class="icon-Bold-Outline"></i>
+                    </button>
+                </div>
+            </div>
+        </section>
+
         <script type="module" src="./src/script/index.js"></script>
 
         <!-- For browsers that have JS diabled  -->
