AR_RU_08 : newsletter : saving chnages

--- a/index.html
+++ b/index.html
@@ -567,6 +567,28 @@
             </div>
         </section>
 
+        <section class="newsletter container">
+            <div class="newsletter__headings-wrapper">
+                <h3
+                    class="newsletter__heading section-heading pink-text circular-md"
+                >
+                    SUBSCRIBE TO OUR NEWSLETTER
+                </h3>
+                <h4
+                    class="newsletter__sub-heading section-sub-heading circular-md"
+                >
+                    Prepare yourself & let's explore the beauty of the world
+                </h4>
+            </div>
+
+            <div class="newsletter__form">
+                <input type="text" />
+                <button class="primary--button button newsletter__button">
+                    Subscribe
+                </button>
+            </div>
+        </section>
+
         <script type="module" src="./src/script/index.js"></script>
 
         <!-- For browsers that have JS diabled  -->
